Add transcribe button to download mode
- Created download-enhance.js to monitor download results
- Automatically adds "Transcribe This Video" button after download
- Uses MutationObserver to detect when download link appears
- Integrates with WhisperAPI for transcription
- Displays transcription results in download mode
- Works seamlessly with existing download functionality

--- a/index.html
+++ b/index.html
@@ -191,5 +191,6 @@
     <script src="settings.js"></script>
     <script src="tabs.js"></script>
     <script src="whisper.js"></script>
+    <script src="download-enhance.js"></script>
 </body>
 </html>
