--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <script src="https://unpkg.com/@ffmpeg/util@0.12.1/dist/umd/index.js"></script>
 
     <script src="https://mrtusarrx.github.io/instagram-reels-download/fetch.js"></script>
-    <script src="https://mrtusarrx.github.io/instagram-reels-download/flux.js"></script>
+    <script src="flux.js"></script>
     <script src="settings.js"></script>
     <script src="tabs.js"></script>
     <script src="whisper.js"></script>
