Serve FFmpeg locally to fix CORS issues
- Downloaded FFmpeg libraries to lib/ffmpeg/
- Includes ffmpeg.js, util.js, ffmpeg-core.js, and ffmpeg-core.wasm
- Updated index.html to load from local files
- Updated whisper.js to use local core files
- Fixes Security Error when loading from unpkg.com CDN
- Total size: ~31MB for wasm file but solves CORS completely

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         </div>
     </div>
 
-    <!-- FFmpeg.wasm for audio extraction -->
-    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.js"></script>
-    <script src="https://unpkg.com/@ffmpeg/util@0.12.1/dist/umd/index.js"></script>
+    <!-- FFmpeg.wasm for audio extraction (served locally) -->
+    <script src="lib/ffmpeg/ffmpeg.js"></script>
+    <script src="lib/ffmpeg/util.js"></script>
 
     <script src="https://mrtusarrx.github.io/instagram-reels-download/fetch.js"></script>
     <script src="flux.js"></script>
