--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
                     <div class="spinner" id="transcribeSpinner"></div>
                     <div id="transcribeResponse"></div>
 
-                    <!-- File upload fallback for CORS issues -->
-                    <div id="fileUploadSection" style="display: none;">
+                    <!-- File upload option -->
+                    <div id="fileUploadSection">
                         <p class="info-text">
                             <i class="fas fa-info-circle"></i>
-                            Due to CORS restrictions, please download the video first and then upload it here:
+                            Or upload media from your device (video or audio) to transcribe directly:
                         </p>
                         <div class="input-group">
-                            <input type="file" id="videoFileInput" accept="video/*" class="file-input">
+                            <input type="file" id="videoFileInput" accept="video/*,audio/*" class="file-input">
                             <button id="transcribeFileButton" class="btn">
-                                <i class="fas fa-closed-captioning"></i> Transcribe Uploaded Video
+                                <i class="fas fa-closed-captioning"></i> Transcribe Uploaded Media
                             </button>
                         </div>
                     </div>
